// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json > resolveJson > resolveJson case 0 1`] = `
"{
  "a": {
    "$schema": "https://ice-vite.netlify.app/component.json"
  }
}"
`;

exports[`json > resolveJson > resolveJson case 1 1`] = `"{}"`;

exports[`json > resolveJson > resolveJson case 2 1`] = `
"{
  "usingComponents": false
}"
`;

exports[`json > resolveJson > resolveJson case 3 1`] = `
"{
  "usingComponents": {
    "navigation-bar": "/components/navigation-bar/navigation-bar",
    "t-button": "tdesign-miniprogram/button/button",
    "t-divider": "tdesign-miniprogram/divider/divider",
    "a": "../../a/a",
    "b": "./b/b/b"
  }
}"
`;

exports[`json > resolveJson > resolveJson case 4 1`] = `
"{
  "usingComponents": {
    "navigation-bar": "/components/navigation-bar/navigation-bar",
    "t-button": "tdesign-miniprogram/button/button",
    "t-divider": "tdesign-miniprogram/divider/divider",
    "a": "～/../a/a",
    "b": "@/b/b/b"
  }
}"
`;

exports[`json > resolveJson > resolveJson case 5 1`] = `
"{
  "usingComponents": {
    "b": "b/b",
    "d": "../c"
  }
}"
`;

exports[`json > resolveJson > resolveJson case 6 1`] = `
"{
  "usingComponents": {
    "b": "b/b",
    "d": "../c"
  },
  "subPackages": [
    {
      "root": "packageA",
      "name": "pack1",
      "pages": [
        "pages/cat",
        "pages/dog"
      ],
      "entry": "index.js"
    },
    {
      "root": "packageB",
      "name": "pack2",
      "pages": [
        "pages/apple",
        "pages/banana"
      ],
      "entry": "index.js",
      "independent": true
    }
  ],
  "subpackages": [
    {
      "root": "packageA",
      "name": "pack1",
      "pages": [
        "pages/cat",
        "pages/dog"
      ],
      "entry": "index.js"
    },
    {
      "root": "packageB",
      "name": "pack2",
      "pages": [
        "pages/apple",
        "pages/banana"
      ],
      "entry": "index.js",
      "independent": true
    }
  ]
}"
`;

exports[`json > stringifyJson > resolve replacer case 0 1`] = `
"{
  "a": {
    "b": "@/xx/yy"
  }
}"
`;

exports[`json > stringifyJson > resolve replacer case 1 1`] = `
"{
  "a": {
    "b": "@/xx/yy"
  }
}"
`;
